--- a/Editor/text.lang
+++ b/Editor/text.lang
@@ -24,17 +24,18 @@ label.noise1st_properties||Noise 1st Properties||Noise 1st プロパティ
 label.noise2nd_properties||Noise 2nd Properties||Noise 2nd プロパティ
 label.noise3rd_properties||Noise 3rd Properties||Noise 3rd プロパティ
 label.others||Others||その他
-label.remove_unused_properties||Remove Unused Properties||内部の未使用プロパティの削除
+label.data_cleanup||Data Clean Up||内部データのクリーンアップ
 label.texture_properties||Texture Properties||テクスチャプロパティ
 label.all_properties||All Properties||全てのプロパティ
+label.unused_keywords||Unused Keywords||未使用のキーワード
 label.title_skin||Title Skin||タイトルスキン
 
-label.fragment.mask_offset||Masks|Offset||マスク|オフセット
-label.coloring.mask_offset||Masks|Offset||マスク|オフセット
-label.geometry.mask_offset||Masks|Offset||マスク|オフセット
-label.orbit.mask_offset||Masks|Offset||マスク|オフセット
-label.orbit_rotation.mask_offset||Masks|Offset||マスク|オフセット
-label.orbit_rotation_offset.mask_offset||Masks|Offset||マスク|オフセット
+label.fragment.mask_offset||Masks / Offset||マスク / オフセット
+label.coloring.mask_offset||Masks / Offset||マスク / オフセット
+label.geometry.mask_offset||Masks / Offset||マスク / オフセット
+label.orbit.mask_offset||Masks / Offset||マスク / オフセット
+label.orbit_rotation.mask_offset||Masks / Offset||マスク / オフセット
+label.orbit_rotation_offset.mask_offset||Masks / Offset||マスク / オフセット
 
 label.fragment.source||Source||参照先
 label.coloring.source||Source||参照先
@@ -57,8 +58,9 @@ label.orbit.modifier||Modifiers||モディファイア
 label.orbit_rotation.modifier||Modifiers||モディファイア
 label.orbit_rotation_offset.modifier||Modifiers||モディファイア
 
-text.remove_texture_properties_text||Remove any unused texture properties in material.||マテリアル内部の未使用テクスチャプロパティを削除します。
-text.remove_all_properties_text||Remove any unused properties in material.||マテリアル内部の全ての未使用プロパティを削除します。
+text.remove_unused_textures_text||Remove any unused texture properties in material.||マテリアル内部の未使用テクスチャプロパティを削除します。
+text.remove_unused_properties_text||Remove any unused properties in material.||マテリアル内部の全ての未使用プロパティを削除します。
+text.remove_unused_keywords_text||Remove any unused keywords in material.||マテリアル内部の未使用キーワードを削除します。
 text.remove||Remove||削除
 text.cancel||Cancel||キャンセル
 
