--- a/Editor/properties.lang
+++ b/Editor/properties.lang
@@ -1,4 +1,5 @@
 property._Test||TEST||テスト
+_MainTex||Fallback Tex||フォールバックテクスチャ
 
 _RenderingMode||Rendering Mode (PASS)||レンダリングモード (PASS)
 _Cull||Culling Mode||カリングモード
