Add property block copy/paste

--- a/Editor/properties.lang
+++ b/Editor/properties.lang
@@ -1,4 +1,4 @@
-property._Test||TEST||テスト
+_dummy||_dummy||_dummy
 _MainTex||Fallback Tex||フォールバックテクスチャ
 
 _RenderingMode||Rendering Mode (PASS)||レンダリングモード (PASS)
