--- a/Editor/text.lang
+++ b/Editor/text.lang
@@ -20,15 +20,17 @@ label.orbit_rotation||Orbit Rotation||Orbit 回転
 label.orbit_rotation_offset||Orbit Rotation Offset||Orbit 回転オフセット
 label.orbit_wave||Orbit Wave||Orbit Wave
 label.orbit_audiolink||Orbit AudioLink||Orbit AudioLink
-label.noise1st_properties||Noise 1st Properties||Noise 1st プロパティ
-label.noise2nd_properties||Noise 2nd Properties||Noise 2nd プロパティ
-label.noise3rd_properties||Noise 3rd Properties||Noise 3rd プロパティ
 label.others||Others||その他
 label.data_cleanup||Data Clean Up||内部データのクリーンアップ
 label.texture_properties||Texture Properties||テクスチャプロパティ
 label.all_properties||All Properties||全てのプロパティ
 label.unused_keywords||Unused Keywords||未使用のキーワード
 label.title_skin||Title Skin||タイトルスキン
+
+label.mask_offset||Masks / Offset||マスク / オフセット
+label.source||Source||参照先
+label.audiolink_source||AudioLink Source||AudioLink参照先
+label.modifiers||Modifiers||モディファイア
 
 label.fragment.mask_offset||Masks / Offset||マスク / オフセット
 label.coloring.mask_offset||Masks / Offset||マスク / オフセット
